# razorpay_integration

./: .gitignore  README.md  README_1.md  Structure  pyproject.toml  requirements.txt  setup.py
public/templates/: payment_slip.html
razorpay_integration/: __init__.py  dashboard.py  hooks.py  modules.txt  patches.txt  razorpay_client.py  receipt_generator.py  utils.py  zohocliq.py
razorpay_integration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
razorpay_integration/config/: desktop.py
razorpay_integration/doctype/razorpay_analytics/: razorpay_analytics.json
razorpay_integration/doctype/razorpay_payment/: razorpay_payment.json
razorpay_integration/doctype/razorpay_settings/: razorpay_settings.json  razorpay_settings.py
razorpay_integration/doctype/razorpay_settlement/: razorpay_settlement.py
razorpay_integration/doctype/razorpay_settlement_transactions/: razorpay_settlement_transactions.json  razorpay_settlement_transactions.py
razorpay_integration/doctype/razorpay_virtual_account/: razorpay_virtual_account.json
razorpay_integration/hooks/: sales_order.py  task.py
razorpay_integration/public/: build.json
razorpay_integration/public/js/: customer.bundle.js  customer.js  quotation.bundle.js  quotation.js
razorpay_integration/public/templates/: payment_slip.html  quotation_print.html
razorpay_integration/razorpay_integration/: razorpay_client.py  receipt_generator.py  zohocliq.py
razorpay_integration/razorpay_integration/workspace/: __init__.py
razorpay_integration/www/: __init__.py
(+17 files in other folders)
